# AgroMind

./: .env.example  .eslintrc.json  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile.api  Dockerfile.web  IMPLEMENTATION_SUMMARY.md  PHASE_4_README.md  QUICK_START.md  README.md  docker-compose.yml  package.json  tsconfig.json  turbo.json
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/src/: __init__.py  config.py  database.py  main.py
apps/api/src/agents/: __init__.py  fertilization.py  harvest.py  irrigation.py  pest_response.py
apps/api/src/api/: __init__.py
apps/api/src/api/routes/: enterprise.py  farms.py  fields.py  marketplace.py  predictions.py  robotics.py  telemetry.py  treatments.py  vision.py
apps/api/src/ml/: __init__.py  datasets.py  evaluation.py  predictions.py  training.py
apps/api/src/services/: __init__.py  agronomy.py  biological.py  robotics.py  telemetry.py  vision.py
apps/web/: next.config.js  package.json  tsconfig.json
apps/web/src/app/: layout.tsx
apps/web/src/app/(dashboard)/: layout.tsx  page.tsx
apps/web/src/components/dashboard/: OperationsDashboard.tsx
apps/web/src/components/layout/: Header.tsx  Sidebar.tsx
apps/web/src/components/ui/: card.tsx
apps/web/src/lib/: utils.ts
apps/web/src/styles/: globals.css
infrastructure/database/: init.sql
infrastructure/kubernetes/: api-deployment.yaml
infrastructure/prometheus/: prometheus.yml
