[tool.poetry]
name = "agromind-api"
version = "0.0.1"
description = "AgroMind API - Core backend service for agricultural intelligence"
authors = ["AgroMind Team <team@agromind.ai>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.0"}
aioredis = "^2.0.0"
httpx = "^0.25.0"
tenacity = "^8.2.0"
loguru = "^0.7.0"
prometheus-client = "^0.18.0"
opencv-python = "^4.8.0"
numpy = "^1.24.0"
pillow = "^10.0.0"
torch = "^2.1.0"
torchvision = "^0.16.0"
geopandas = "^0.13.0"
shapely = "^2.0.0"
rasterio = "^1.3.0"
kafka-python = "^2.0.2"
grpcio = "^1.59.0"
protobuf = "^4.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
ruff = "^0.1.0"
mypy = "^1.7.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
